--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter:
     sdk: flutter
   markdown: ^5.0.0
+  flutter_markdown: ^0.6.10
 
 
   # The following adds the Cupertino Icons font to your application.
